# rcpputils

./: CMakeLists.txt
include/rcpputils/: find_library.hpp
src/: _find_loaded_library.hpp  find_library.cpp
test/: test_find_library.cpp  toy_test_library.cpp
